infra/k8s/overlays/staging/patches/minio-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio-service
  namespace: axiom
spec:
  type: NodePort
  ports:
    - port: 9000
      targetPort: 9000
      nodePort: 30900
      protocol: TCP
      name: api
    - port: 9001
      targetPort: 9001
      nodePort: 30901
      protocol: TCP
      name: console
